update: Cliente class as entity